pretty much done, I guess? perhaps a migration schema is sufficient